<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_InicioCliente"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_MiCuenta"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/mi_cuenta" />
        <item
            android:id="@+id/nav_Catalogo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/catalogo" />
        <item
            android:id="@+id/nav_HacerPedidos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/hacer_pedidos" />
        <item
            android:id="@+id/nav_CerrarSesion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/cerrar_sesion" />
    </group>
</menu>
