<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jacobo.managercounts.FragmentoMiPerfil">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/usuario"/>
            <TextView style="@style/StyleTextViewDatos"
                android:hint="@string/nombre"/>
            <TextView style="@style/StyleTextViewDatos"
                android:hint="@string/telefono"/>
            <TextView style="@style/StyleTextViewDatos"
                android:hint="@string/direccion"/>
            <TextView style="@style/StyleTextViewDatos"
                android:hint="@string/barrio"/>
            <TextView style="@style/StyleTextViewDatos"
                android:hint="@string/cuenta"/>
            <TextView style="@style/StyleTextViewDatos"
                android:hint="@string/pago"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
